# dAPP-crowdfunding-INSTANT

./: README.md
dapp/: package.json
dapp/public/: .htaccess  index.html
dapp/src/: App.tsx  config.tsx
dapp/src/components/Layout/Navbar/: index.tsx
dapp/src/pages/Dashboard/: TopInfo.tsx
dapp/src/pages/Dashboard/Actions/: index.tsx
dapp/src/pages/Home/: index.tsx
smartcontract/: Cargo.toml
smartcontract/interaction/: devnet.snippets.sh  mainnet.snippets.sh  testnet.snippets.sh
smartcontract/mandos/: _generated_fund.scen.json  _generated_init.scen.json  _generated_query_status.scen.json  _generated_sc_err.scen.json  egld-crowdfunding-claim-failed.scen.json  egld-crowdfunding-claim-successful.scen.json  egld-crowdfunding-fund-too-late.scen.json  egld-crowdfunding-fund.scen.json  egld-crowdfunding-init.scen.json
smartcontract/meta/: Cargo.toml
smartcontract/meta/src/: main.rs
smartcontract/src/: crowdfunding_esdt.rs
smartcontract/tests/: crowdfunding_esdt_rust_test.rs
smartcontract/wasm/: Cargo.toml
smartcontract/wasm/src/: lib.rs
